review-feedback: Menu 생성 로직 개선 및 불필요한 의존성 제거 - 메뉴 생성 중 가격 검증 과정에서의 비효율 제거 - Menu 엔티티에서 Product 의존성 제거